Added multi delete functionality
next steps should be to deprecate the synchronous operations.
